try to fix background on mobile ( 4 )

--- a/client/src/pages/MainPage/heroSection/styles/matrixBackground.module.scss
+++ b/client/src/pages/MainPage/heroSection/styles/matrixBackground.module.scss
@@ -12,7 +12,7 @@
 
 
 .matrixContainer {
-    display: relative;
+    position: relative;
     height: 100%;
     width: 100%;
     
